--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
   "content_scripts": [
     {
       "matches": ["http://*.com/*"],
-      "js": ["jquery-2.2.0.min.js", "popup.js", "hound-web-sdk.min.js"]
+      "js": ["jquery-2.2.0.min.js", "popup.js", "hound-web-sdk.min.js", "contents.js"],
+       "run_at": "document_end"
     }
   ],
 
